k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valven-ecommerce
  labels:
    name: valven-ecommerce
    environment: production
